--- a/interna/generico.html
+++ b/interna/generico.html
@@ -18,8 +18,10 @@ Dependencias CSS
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-<!-- ULHT -->    
+<!-- ULHT -->
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,600italic,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet/less" type="text/css" href="css/ulht.less" />
+<link rel="stylesheet/less" type="text/css" href="css/tipografia.less" />
 </head>
 
 <body>
@@ -37,7 +39,17 @@ Dependencias CSS
 <!-- ## CONTEUDO ## -->
 <div class="container">
   <div class="row">
-    <div class="col-md-4"><img src="holder.js/100%x300"></div>
+    <div class="col-md-4">
+        <h1>h1</h1>
+        <h2>h2</h2>
+        <h3>h3</h3>
+        <h4>h4</h4>
+        <p>txt normal</p>
+        <p>txt normal</p>
+        <p>txt normal</p>
+        <p class="txt-pequeno">txt pequeno</p>    
+        <p class="txt-grande">txt grande</p>
+    </div>
     <div class="col-md-4"><img src="holder.js/100%x300"></div>
     <div class="col-md-4"><img src="holder.js/100%x300"></div>
   </div>
